# terraluna

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TODO  build.ezmk  build.ninja  shader.frag  shader.vert  shader1.vert  shader2.vert  shaders1.shd
assets/: AssetData.cc  AssetData.hh  CMakeLists.txt  TileData.hh
client/: CMakeLists.txt  Main.cc  main.c
client/Graphics/Render/: VertexArray.cc  VertexArray.hh
client/Graphics/Shaders/: Shader.cc  Shader.hh
client/Graphics/Textures/: Texture2D.cc  Texture2D.hh
client/Main/: Main.cc  Main.hh
client/Misc/Maths/: Math.hh  Matrix4f.cc  Matrix4f.hh  Vector2f.cc  Vector2f.hh  Vector3f.cc  Vector3f.hh
client/Shaders/: Shader.cc  Shader.hh
client/res/: shader.frag  shader.vert
client/src/Assets/: Asset.hh  AssetData.hh  Assets.cc  Assets.hh  Tilemap.hh
client/src/Audio/: Audio.cc  Audio.hh
client/src/Main/: Main.cc  Main.hh
development/: NOTES
development/attic/client/: VFS.cc  VFS.hh
development/build_stuff/: WIN32.ninja  X11.ninja
grap/: CMakeLists.txt  Grap.hh
resources/: shader.sdr
source/Assets/: VFS.cc  VFS.hh
source/Audio/: Audio.cc  Audio.hh
source/Graphics/Render/: VertexArray.cc  VertexArray.hh
source/Graphics/Shaders/: Shader.cc  Shader.hh
source/Graphics/Textures/: Texture2D.cc  Texture2D.hh
source/Graphics/Windows/: Window.cc  Window.hh
source/Main/: Main.cc  Main.hh
source/Misc/Maths/: Math.hh  Matrix4f.cc  Matrix4f.hh  Vector2f.cc  Vector2f.hh  Vector3f.cc  Vector3f.hh
source/res/: shader.sdr
source/src/Assets/: Assets.hh
source/src/Audio/: Audio.cc  Audio.hh
(+11 files in other folders)
